Fixed contact section overflow, about me desc, project desc

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,6 @@ body {
   font-style: normal;
   background-color: #000000;
   margin: 0;
-  scroll-behavior: smooth;
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
@@ -18,7 +17,8 @@ body {
 
 .content-wrapper {
   margin: 0;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
   width: 100%;
 }
 
@@ -1278,6 +1278,10 @@ form {
 
   #particles-js {
     height: 450vmax;
+  }
+
+  .about-desc {
+    height: 125px;
   }
 
   .unplugged-text h4,
